{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 20,
  "lineage": "38d309bb-d2db-5dae-215c-9954c03f727d",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/networkInterfaces/devops-nic",
            "internal_domain_name_suffix": "mghzjaczwefeznasqrue5gbdjg.ex.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/publicIPAddresses/devops-public-ip",
                "subnet_id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/virtualNetworks/trabalho-devops-vnet/subnets/devops-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northcentralus",
            "mac_address": "7C-ED-8D-CA-D1-14",
            "name": "devops-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "teste-rg",
            "virtual_machine_id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Compute/virtualMachines/trabalho-devops-vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-nic",
            "resource_group_name": "teste-rg",
            "subscription_id": "458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_public_ip.public_ip",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/networkInterfaces/devops-nic|/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg",
            "network_interface_id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/networkInterfaces/devops-nic",
            "network_security_group_id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_network_interface.nic",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_public_ip.public_ip",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg",
            "location": "northcentralus",
            "name": "devops-nsg",
            "resource_group_name": "teste-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1020,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1010,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-nsg",
            "resource_group_name": "teste-rg",
            "subscription_id": "458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg/securityRules/HTTP",
            "name": "HTTP",
            "network_security_group_name": "devops-nsg",
            "priority": 1010,
            "protocol": "Tcp",
            "resource_group_name": "teste-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "HTTP",
            "network_security_group_name": "devops-nsg",
            "resource_group_name": "teste-rg",
            "subscription_id": "458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg/securityRules/HTTPS",
            "name": "HTTPS",
            "network_security_group_name": "devops-nsg",
            "priority": 1020,
            "protocol": "Tcp",
            "resource_group_name": "teste-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "HTTPS",
            "network_security_group_name": "devops-nsg",
            "resource_group_name": "teste-rg",
            "subscription_id": "458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "devops-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "teste-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "SSH",
            "network_security_group_name": "devops-nsg",
            "resource_group_name": "teste-rg",
            "subscription_id": "458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/publicIPAddresses/devops-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "130.131.8.46",
            "ip_version": "IPv4",
            "location": "northcentralus",
            "name": "devops-public-ip",
            "resource_group_name": "teste-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-public-ip",
            "resource_group_name": "teste-rg",
            "subscription_id": "458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/virtualNetworks/trabalho-devops-vnet/subnets/devops-subnet",
            "name": "devops-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "teste-rg",
            "virtual_network_name": "trabalho-devops-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-subnet",
            "resource_group_name": "teste-rg",
            "subscription_id": "458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71",
            "virtual_network_name": "trabalho-devops-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "80948f61-b159-4c0a-b412-84684f98234e",
            "id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/virtualNetworks/trabalho-devops-vnet",
            "location": "northcentralus",
            "name": "trabalho-devops-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "teste-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71/resourceGroups/teste-rg/providers/Microsoft.Network/virtualNetworks/trabalho-devops-vnet/subnets/devops-subnet",
                "name": "devops-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "trabalho-devops-vnet",
            "resource_group_name": "teste-rg",
            "subscription_id": "458daca9-4ccb-4cc5-8f9c-91a2ccb6ca71"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}